@@ -1,5 +1,7 @@
 # Version 0.4
 
+* Fix missing check if opening .gtkrc-2.0 succeeded before attempting to parse it.
+
 # Version 0.3.1
 
 * Fixes for a number of a packaging glitches.
